welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:34: error: ')' expected but ';' found.
		serpent();
                         ^